hard-gists/caeb0a6dc89d9e7ec48d/run.log
=== Docker Run Log for caeb0a6dc89d9e7ec48d ===
Started at: Mi 29. Okt 20:16:58 CET 2025

[2025-10-29 20:16:58] START: Running container for caeb0a6dc89d9e7ec48d
[2025-10-29 20:16:59] SUCCESS: Container 9e393c99b4dc6d68ad31a9880844a05fc38f05631bab2b311700fd87ec07c98c started for caeb0a6dc89d9e7ec48d
=== Container logs for caeb0a6dc89d9e7ec48d ===
  File "/snippet.py", line 9
    print "UserData-ID: ", data["descid"][1].id
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for caeb0a6dc89d9e7ec48d ===
[2025-10-29 20:17:01] INFO: Container 9e393c99b4dc6d68ad31a9880844a05fc38f05631bab2b311700fd87ec07c98c has stopped
